# lof

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.txt  README.md  build.sh  pyproject.toml
.github/workflows/: main.yml
docs/: README.rst
example/: .env  template.yaml
example/lambdas/auth/: lambda_auth.py
example/lambdas/authorizer/: lambda_auth.py
example/lambdas/lambda1/: lambda.py  lambda2.py
example/lambdas/lambda3/: lambda.py
example/lambdas/lambda_proxy/: lambda_proxy.py
example/lambdas/update_lambda/: update_lambda.py
example/layers/some/: some_module.py
lof/: __init__.py  aws_context.py  cli.py  code_gen.py  core.py  env_vars.py  errors.py  generator.py  parser.py  template.jinja2
lof/providers/: aws.py
tests/: test_env_vars.py  test_generator.py  test_run_server.py  test_template_parsing.py  utils.py
tests/integration/: test_output_parse.py
tests/providers/: test_aws.py
tests/test_data/: .env  template.json  template.yaml  vars.json
